Fix spacing in footer

--- a/style.css
+++ b/style.css
@@ -348,6 +348,7 @@ body {
   color: #093f68;
   padding: 0 20px;
   cursor: pointer;
+  margin-left: 20px;
 }
 
 .btn:hover {
